<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background"
    tools:context="com.example.azamat.heartbeatratemanager.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/auth_register_text"
        android:textColor="#000"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/register_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:paddingLeft="@dimen/pdg_et_auth"
        android:layout_marginBottom="@dimen/mrgn_et_auth"
        android:background="@drawable/et_auth"
        android:hint="@string/et_email_register"
        android:id="@+id/et_email_register"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:paddingLeft="@dimen/pdg_et_auth"
        android:layout_marginBottom="@dimen/mrgn_et_auth"
        android:background="@drawable/et_auth"
        android:hint="@string/et_password_register"
        android:inputType="textPassword"
        android:id="@+id/et_password_register"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:paddingLeft="@dimen/pdg_et_auth"
        android:layout_marginBottom="@dimen/mrgn_et_auth"
        android:background="@drawable/et_auth"
        android:hint="@string/et_password_confirm"
        android:inputType="textPassword"
        android:id="@+id/et_password_confirm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/pdg_button_size"
            android:background="@drawable/btn_middle"
            android:layout_gravity="bottom"
            android:text="@string/next"
            android:id="@+id/btn_next_to_person_date"/>
    </LinearLayout>

</LinearLayout>