<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background"
    tools:context="com.example.azamat.heartbeatratemanager.AuthActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:textSize="@dimen/auth_register_text"
        android:textColor="#000"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/auth_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:paddingLeft="@dimen/pdg_et_auth"
        android:layout_marginBottom="@dimen/mrgn_et_auth"
        android:background="@drawable/et_auth"
        android:hint="@string/et_email_register"
        android:id="@+id/et_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:paddingLeft="@dimen/pdg_et_auth"
        android:layout_marginBottom="@dimen/mrgn_et_auth"
        android:background="@drawable/et_auth"
        android:hint="@string/et_password_register"
        android:id="@+id/et_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/mrgn_et_auth"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="1.15">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_auth"
            android:text="@string/btn_sign_in_register"
            android:textColor="#fff"
            android:id="@+id/btn_sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="ODER"
            android:textColor="#000"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_auth"
            android:text="@string/btn_register"
            android:textColor="#fff"
            android:id="@+id/btn_register"/>
    </LinearLayout>

</LinearLayout>
